force-app/main/default/objects/DocGen_Job__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <description
    >Per-record failure details for a bulk job (record Id + reason), so failures are diagnosable instead of just counted. Oversized records (too many related rows for standard generation) are flagged with guidance to generate them individually via the giant-query path. Capped; a trailing note indicates any additional failures beyond the captured lines.</description>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>