force-app/main/default/objects/DocGen_Job__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description
    >SOQL ORDER BY clause applied to the bulk query. Controls the order records are processed, and therefore the page order of a merged PDF. Validated against the base object's schema before use. Example: Account.Name ASC NULLS LAST, Name ASC</description>
    <label>Sort Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>