force-app/main/default/objects/DocGen_Job__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template</label>
    <referenceTo>DocGen_Template__c</referenceTo>
    <relationshipLabel>Portwood Jobs</relationshipLabel>
    <relationshipName>DocGen_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>